fix: validate post block metadata