@@ -1,5 +1,7 @@
 package com.nowcoder.community.content.application.result;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.UUID;
 
@@ -16,6 +18,12 @@ public record PostContentBlockResult(
         PostMediaViewResult media
 ) {
     public PostContentBlockResult {
-        metadata = metadata == null ? Map.of() : Map.copyOf(metadata);
+        metadata = copyMetadata(metadata);
+    }
+
+    private static Map<String, Object> copyMetadata(Map<String, Object> metadata) {
+        return metadata == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(metadata));
     }
 }
